Fixed some review suggestions. Added additional documentation.